add basic html layout of index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,55 @@
-<html>
-	<body>
-		Hello DBC!
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Mohammad Amin</title>
+</head>
+<body>
+	<header>
+		<a class="logo"href=""><h3>Mohammad Amin</h3></a>
+			<nav class="navigation-links">
+				<ul>
+					<li><a href="#">About Me</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Projects</a></li> 
+					<li><a href="#">Resume</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</nav>
+	</header>
+
+	<hr>
+
+	<div class="main-body">
+		<img src="imgs/prof.jpg" alt="Mohammad Amin" class="prof-img">
+	
+		<section class="index-main">
+
+			<div class="index-links">
+				<p><a href="https://twitter.com/betterxhalf">Twitter</a> |
+				<a href="https://www.facebook.com/singmo">Facebook</a> |
+				<a href="https://www.linkedin.com/pub/mohammad-amin/a8/485/813">LinkedIn</a> | 
+				<a href="https://github.com/malamin92">GitHub</a></p>
+			</div>
+
+			<div class="index-text">
+				<p>Hello there! My name is Mohammad Amin. I am a an up and coming web deleoper. On this site, you will find
+				information about myself. Feel free to click around and learn more about me and check out the contacts section
+				if you want to get in touch!</p>
+			</div>
+
+		</section>
+	</div>
+	<hr>
+
+	<footer>
+		<div class="footer-links">
+			<p><a href="https://twitter.com/betterxhalf">Twitter</a> |
+			<a href="https://www.facebook.com/singmo">Facebook</a> |
+			<a href="https://www.linkedin.com/pub/mohammad-amin/a8/485/813">LinkedIn</a> | 
+			<a href="https://github.com/malamin92">GitHub</a></p>
+		</div>
+		<p>©<span class="copyright">2015 Mohammad Amin</span></p>
+	</footer>
+</body>
 </html>
