fix minor errors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<a class="logo"href=""><h3>Mohammad Amin</h3></a>
+		<a class="logo" href=""><h3>Mohammad Amin</h3></a>
 			<nav class="navigation-links">
 				<ul>
 					<li><a href="#">About Me</a></li>
@@ -24,6 +24,7 @@
 		<img src="imgs/prof.jpg" alt="Mohammad Amin" class="prof-img">
 	
 		<section class="index-main">
+			<h1>Welcome to my site!</h1>
 
 			<div class="index-links">
 				<p><a href="https://twitter.com/betterxhalf">Twitter</a> |
@@ -37,7 +38,6 @@
 				information about myself. Feel free to click around and learn more about me and check out the contacts section
 				if you want to get in touch!</p>
 			</div>
-
 		</section>
 	</div>
 	<hr>
