--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 	<header>
-		<a class="logo" href=""><h3>Mohammad Amin</h3></a>
+		<a class="logo" href="index.html"><h3>Mohammad Amin</h3></a>
 			<nav class="navigation-links">
 				<ul>
 					<li><a href="#">About Me</a></li>
-					<li><a href="#">Blog</a></li>
+					<li><a href="blog/index.html">Blog</a></li>
 					<li><a href="#">Projects</a></li> 
 					<li><a href="#">Resume</a></li>
 					<li><a href="#">Contact</a></li>
