--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mohammad Amin</title>
+	<link rel="stylesheet" href="stylesheets/default.css">
+	<link rel="stylesheet" href="stylesheets/main-index.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,500' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header>
-		<a class="logo" href="index.html"><h3>Mohammad Amin</h3></a>
-			<nav class="navigation-links">
-				<ul>
-					<li><a href="#">About Me</a></li>
-					<li><a href="blog/index.html">Blog</a></li>
-					<li><a href="#">Projects</a></li> 
-					<li><a href="#">Resume</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</nav>
+		<nav>
+			<ul class = "nav-links">
+				<li><a class="logo" href="index.html">Mohammad Amin</a></li>
+				<li><a href="#">About Me</a></li> |
+				<li><a href="blog/index.html">Blog</a></li> |
+				<li><a href="#">Projects</a></li> |
+				<li><a href="#">Resume</a></li> |
+				<li><a href="#">Contact</a></li>
+
+			</ul>
+		</nav>
 	</header>
 
-	<hr>
-
 	<div class="main-body">
-		<img src="imgs/prof.jpg" alt="Mohammad Amin" class="prof-img">
+		<img class="index-pic" src="imgs/prof.jpg" alt="Mohammad Amin" class="prof-img">
 	
 		<section class="index-main">
 			<h1>Welcome to my site!</h1>
@@ -35,12 +38,17 @@
 
 			<div class="index-text">
 				<p>Hello there! My name is Mohammad Amin. I am a an up and coming web deleoper. On this site, you will find
-				information about myself. Feel free to click around and learn more about me and check out the contacts section
-				if you want to get in touch!</p>
+				lots of information about me. Poke around and see what you can find! If you'd like to get in touch then hit the 
+				contact link. :]</p>
+
+				<p>Things might look a little spacey now, but I am currently attending Dev Bootcamp in NYC and over the next couple
+				of months this site will fill out and come to life. Follow my blogs if you'd like to see what I am learning on my web
+				development journey!</p>
+
+				<p>I am also very active on social media!</p>
 			</div>
 		</section>
 	</div>
-	<hr>
 
 	<footer>
 		<div class="footer-links">
