--- a/blog-template.html
+++ b/blog-template.html
@@ -2,23 +2,27 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Mohammad Amin's Blog</title>
+	<title>Mohammad Amin</title>
+	<link rel="stylesheet" href="stylesheets/default.css">
+	<link rel="stylesheet" href="stylesheets/blog.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,500' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header>
-		<a class="logo" href="../index.html"><h3>Mohammad Amin</h3></a>
-			<nav class="navigation-links">
-				<ul>
-					<li><a href="#">About Me</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Projects</a></li> 
-					<li><a href="#">Resume</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</nav>
+		<nav>
+			<ul class = "nav-links">
+				<li><a class="logo" href="index.html">Mohammad Amin</a></li>
+				<li><a href="#">About Me</a></li> |
+				<li><a href="blog/index.html">Blog</a></li> |
+				<li><a href="#">Projects</a></li> |
+				<li><a href="#">Resume</a></li> |
+				<li><a href="#">Contact</a></li>
+
+			</ul>
+		</nav>
 	</header>
 
-	<hr>
 		<section class="blog-post">
 			<h1>Title</h1>
 			<h3>Sub-title</h3>
@@ -32,7 +36,6 @@
 				<p>Section 3</p>
 			</div>
 		</section>
-	<hr>
 
 	<footer>
 		<div class="footer-links">
