--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
 		<nav>
 			<ul class = "nav-links">
 				<li><a class="logo" href="index.html">Mohammad Amin</a></li>
-				<li><a href="#">About Me</a></li> |
-				<li><a href="blog/index.html">Blog</a></li> |
-				<li><a href="#">Projects</a></li> |
-				<li><a href="#">Resume</a></li> |
+				<li><a href="#">About Me</a> |</li> 
+				<li><a href="blog/index.html">Blog</a> |</li>
+				<li><a href="#">Projects</a> |</li>
+				<li><a href="#">Resume</a> |</li>
 				<li><a href="#">Contact</a></li>
-
 			</ul>
 		</nav>
 	</header>
 
 	<div class="main-body">
-		<img class="index-pic" src="imgs/prof.jpg" alt="Mohammad Amin" class="prof-img">
+		<img class="index-pic" src="imgs/prof.jpg" alt="Mohammad Amin">
 	
 		<section class="index-main">
 			<h1>Welcome to my site!</h1>
