--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@
 				<input type="submit" value="Send">
 				<input type="reset" value="Reset">
 		</form>
-
+		
+		<p>Check out my social media pages too!</p>
 	</div>
 
 
