finish about me

--- a/about.html
+++ b/about.html
@@ -48,6 +48,19 @@
 			</p>
 		</section>
 
+		<section class="eduction">
+			<h3>My Education</h3>
+			<p>
+				I graduated with a Bachelors in Computer Science at Hunter College in NYC. During my studies, I learned many 
+				important aspects of different computer systems. I took courses in computer architecture, software design 
+				involving data structures and algorithms, computer theory, operating systems and many more topics. Amid my
+				last semester of college, I worked on a project in the Ruby on Rails framework and right then and there I knew
+				web development is what I wanted to do for my career. Since I have graduated I have been teaching myself the
+				different aspets of the RAILS framework and furthering my knowledge of programming in general. I am currently 
+				attending Dev Bootcamp in NYC to complete their course in full-stack web development. 
+			</p>
+		</section>
+
 		<section class="interests">
 			<h3>What do I do?</h3>
 			<p>
@@ -66,20 +79,6 @@
 			</p>
 		</section>
 
-		<section class="eduction">
-			<h3>Education</h3>
-			<p>
-				I graduated with a Bachelors in Computer Science at Hunter College in NYC. During my studies, I learned many 
-				important aspects of different computer systems. I took courses in computer architecture, software design 
-				involving data structures and algorithms, computer theory, operating systems and many more topics. During my
-				last semester of college, I worked on a project in the Ruby on Rails framework and right then and there I knew
-				web development is what I wanted to do for my career. Since I have graduated I have been teaching myself the
-				different aspets of the RAILS framework and furthering my knowledge of programming in general. I am currently 
-				attending Dev Bootcamp in NYC to complete their course in full-stack web development. 
-			</p>
-		</section>
-
-		
 	</main>
 
 
