--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 		</section>
 
 		<section class="interests">
-			<h3>What do I do?</h3>
+			<h3>What I Love</h3>
 			<p>
 				I have an undying love for technology. I always try to keep up to date with the newest technologies,
 				wether it's the newest phone, hottest framework or language, I love researching how 
