add projcts page

--- a/projects/index.html
+++ b/projects/index.html
@@ -14,8 +14,8 @@
 			<ul class = "nav-links">
 				<li><a class="logo" href="../index.html">Mohammad Amin</a></li>
 				<li><a href="../about.html">About Me</a> |</li> 
-				<li><a href="index.html">Blog</a> |</li>
-				<li><a href="../projects/index.html">Projects</a> |</li>
+				<li><a href="../blog/index.html">Blog</a> |</li>
+				<li><a href="index.html">Projects</a> |</li>
 				<li><a href="#">Resume</a> |</li>
 				<li><a href="../contact.html">Contact</a></li>
 			</ul>
@@ -24,15 +24,11 @@
 
 
 	<section class="blog-index-body">
-		<h1>Check out my blog!</h1>
+		<h1>Some things I've worked on:</h1>
 
-		<div class="blog-list">
+		<div class="project-list">
 			<ul>
-				<li><a href="git.html">Version Control - 10/21/2015</a></li>
-				<li><a href="css-concepts.html">The CSS Box Model - 11/04/2015</a></li>
-				<li><a href="arrays-hashes.html">Arrays and Hashes - 11/13/2015</a></li>
-				<li><a href="enumerable-methods.html">Enumerables - 11/21/2015</a></li>
-				<li><a href="ruby-classes.html">Ruby Classes - 11/27/2015</a></li>
+				<li>Projects to come!</li>
 			</ul>
 		</div>
 	</section>
