add link to cheat sheet

--- a/projects/index.html
+++ b/projects/index.html
@@ -28,7 +28,7 @@
 
 		<div class="project-list">
 			<ul>
-				<li>Projects to come!</li>
+				<li><a href="cheatsheet.html">SQL CHEAT SHEET</a></li>
 			</ul>
 		</div>
 	</section>
