--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	</header>
 
 	<div class="main-body">
-		<img class="index-pic" src="imgs/prof.jpg" alt="Mohammad Amin">
 	
 		<section class="index-main">
 			<h1>Welcome to my site!</h1>
@@ -46,6 +45,11 @@
 
 				<p>I am also very active on social media!</p>
 			</div>
+		
+		<section class="prof-pic">
+			<img class="index-pic" src="imgs/prof.jpg" alt="Mohammad Amin">
+		</section>
+		
 		</section>
 	</div>
 
