--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Mohammad Amin</title>
 	<link rel="stylesheet" href="stylesheets/default.css">
-	<link rel="stylesheet" href="stylesheets/main-index.css">
+	<link rel="stylesheet" href="stylesheets/contact.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,500' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
 </head>
@@ -21,39 +21,25 @@
 			</ul>
 		</nav>
 	</header>
-
-	<div class="main-body">
 	
-		<section class="index-main">
-			<h1>Welcome to my site!</h1>
-
-			<section class="prof-pic">
-			<img class="index-pic" src="imgs/prof.jpg" alt="Mohammad Amin">
-		</section>
+	<div class="contact-body">
 		
+		<p>Interested in working together? <br> Get in in touch:</p>
 
-			<div class="index-links">
-				<p><a href="https://twitter.com/betterxhalf">Twitter</a> |
-				<a href="https://www.facebook.com/singmo">Facebook</a> |
-				<a href="https://www.linkedin.com/pub/mohammad-amin/a8/485/813">LinkedIn</a> | 
-				<a href="https://github.com/malamin92">GitHub</a></p>
-			</div>
-
-			<div class="index-text">
-				<p>Hello there! My name is Mohammad Amin. I am a an up and coming web deleoper. On this site, you will find
-				lots of information about me. Poke around and see what you can find! If you'd like to get in touch then hit the 
-				contact link. :]</p>
-
-				<p>Things might look a little spacey now, but I am currently attending Dev Bootcamp in NYC and over the next couple
-				of months this site will fill out and come to life. Follow my blogs if you'd like to see what I am learning on my web
-				development journey!</p>
-
-				<p>I am also very active on social media!</p>
-			</div>
+		<form action="MAILTO:m.alamin92@gmail.com" method="post" enctype="text/plain">
+			Name:<br>
+				<input type="text" name="name" value="" size="50px"><br>
+			E-mail:<br>
+				<input type="text" name="mail" value="" size="50px"><br>
+			Comment:<br>
+				<textarea name="comment" id="email-comment" value="" rows="15" cols="80"></textarea><br>
+				<input type="submit" value="Send">
+				<input type="reset" value="Reset">
+		</form>
 		
-
-		</section>
+		<p>Check out my social media pages too!</p>
 	</div>
+
 
 	<footer>
 		<div class="footer-links">
